# cmux

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  Package.swift  README.ar.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.km.md  README.ko.md  README.md  README.no.md  README.pl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.zh-CN.md  README.zh-TW.md  TODO.md  cmux.nightly.entitlements  ghostty.h  package.json  plan.md  skills.sh
.circleci/: config.yml
.github/: swift-file-length-budget.tsv  swift-warning-budget.tsv
.greptile/: config.json  files.json  rules.md
CLI/: CMUXCLI+BrowserCommandInventory.swift  CMUXCLI+CommandInventory.swift  CMUXCLI+CommandInventoryVerification.swift  CMUXCLI+Completion.swift  CMUXCLI+DocsSettings.swift  CMUXCLI+ExecutableResolution.swift  CMUXCLI+Feed.swift  CMUXCLI+MoveTabToNewWorkspace.swift  CMUXCLI+RootArguments.swift  CMUXCLI+SimulatorTUI.swift  CMUXCLI+ThemeSupport.swift  CMUXCLI+Themes.swift  CMUXCLI+TmuxCompatHUDSupport.swift  CMUXCLI+TmuxCompatSupport.swift  CMUXCLI+TopRendering.swift  SocketClient+LocalSocketErrors.swift  SocketOperationTelemetry.swift  cmux.swift  cmux_open.swift
GhosttyTabs.xcodeproj/: project.pbxproj
Prototypes/IrohPhoneMacDemo/rust/: Cargo.toml
Prototypes/IrohPhoneMacDemo/rust/include/: iroh_phone_mac_demo_ffi.h  module.modulemap
Prototypes/IrohPhoneMacDemo/rust/src/: lib.rs
Resources/: Info.plist  Localizable.xcstrings  RightSidebarExtensionPoints.xcappextensionpoints  cmux.sdef  opencode-plugin.js
RightSidebarDemoExtension/: Info.plist  InfoPlist.xcstrings  RightSidebarDemoExtension.swift
Sources/: AppDelegate+KeyboardFocus.swift  AppDelegate+MoveTabToNewWorkspace.swift  AppDelegate+RecoverableMainWindowRoutes.swift  AppDelegate.swift  AppearanceSettings.swift  AppleScriptSupport.swift  BonsplitTabBarDebug.swift  BonsplitTabBarPassThrough.swift  BrowserWindowPortal.swift  CloudVMActionLauncher.swift  CmuxConfig.swift  CmuxConfigExecutor.swift  CmuxConfigUI.swift  CmuxSettingsFileStoreTypes.swift  CmuxSurfaceTabBarBuiltInAction.swift  CmuxTopSnapshot.swift  CmuxTopSnapshotScopeCache.swift  CmuxWorkspaceDefinition.swift  CodexAppServerClient.swift  CodexAppServerGeneratedSchemas.swift  CodexAppServerProtocol.swift  ContentView+MoveTabToNewWorkspace.swift  ContentView+RightSidebarCommandPalette.swift  ContentView+ViewCommandPalette.swift  ContentView.swift  ContentViewIdentifierCopyCommands.swift  DockEmptyView.swift  DockPanelView.swift  FileExplorerSearchController.swift  FileExplorerStore.swift  FileExplorerView.swift  FileOpenSocketSupport.swift  GhosttyConfig.swift  GhosttyNSView+MoveTabToNewWorkspace.swift  GhosttyTerminalAppearance.swift  GhosttyTerminalView.swift  GhosttyTerminalViewSupport.swift  GhosttyTextInputSupport.swift  GhosttyViewportSync.swift  JSONCParser.swift  (+70 more)
cmuxTests/: CJKIMEInputTests.swift  (+69 more)
comeup/: Cargo.toml
comeup/crates/cmx/: Cargo.toml
comeup/crates/cmx/src/: main.rs
comeup/crates/cmx/tests/: tui_sync.rs
comeup/crates/comeup-client/: Cargo.toml
comeup/crates/comeup-client/src/: lib.rs
comeup/crates/comeup-core/: Cargo.toml
comeup/crates/comeup-core/src/: lib.rs
comeup/crates/comeup-daemon/: Cargo.toml
comeup/crates/comeup-daemon/src/: lib.rs
comeup/crates/comeup-daemon/tests/: local_sync.rs  unix_socket_sync.rs
comeup/crates/comeup-protocol/: Cargo.toml
comeup/crates/comeup-protocol/src/: lib.rs
comeup/scripts/: run-simulator-terminal-sync.sh
comeup/simulator-harness/: README.md
comeup/simulator-harness/ComeupSimulatorHarness/: ComeupSimulatorHarness.xctestplan  ComeupSimulatorHarnessApp.swift
comeup/simulator-harness/ComeupSimulatorHarness.xcodeproj/: project.pbxproj
comeup/simulator-harness/ComeupSimulatorHarness.xcodeproj/xcshareddata/xcschemes/: ComeupSimulatorHarness.xcscheme
comeup/simulator-harness/ComeupSimulatorHarness.xcworkspace/: contents.xcworkspacedata
comeup/simulator-harness/ComeupSimulatorHarnessPackage/: Package.swift
comeup/simulator-harness/ComeupSimulatorHarnessPackage/Sources/ComeupSimulatorHarnessFeature/: CmuxMobileModels.swift  ComeupLiveTerminalStore.swift  ContentView.swift  GhosttyTerminalSurface.swift
comeup/simulator-harness/ComeupSimulatorHarnessPackage/Tests/ComeupSimulatorHarnessFeatureTests/: ComeupSimulatorHarnessFeatureTests.swift
comeup/simulator-harness/ComeupSimulatorHarnessUITests/: ComeupSimulatorHarnessUITests.swift
comeup/simulator-harness/Config/: ComeupSimulatorHarness.entitlements  Shared.xcconfig  Tests.xcconfig
rust/cmux-cli/: Cargo.toml  README.md
rust/cmux-cli/clients/swift/: Package.swift  README.md
rust/cmux-cli/clients/swift/Sources/CmxClient/: CmxClient.swift
rust/cmux-cli/crates/cmux-cli-client/: Cargo.toml
rust/cmux-cli/crates/cmux-cli-client/src/: lib.rs
rust/cmux-cli/crates/cmux-cli-core/: Cargo.toml
rust/cmux-cli/crates/cmux-cli-core/src/: compositor.rs  grid.rs  layout.rs  lib.rs  probe.rs  settings.rs
rust/cmux-cli/crates/cmux-cli-core/tests/: smoke.rs
rust/cmux-cli/crates/cmux-cli-protocol/: Cargo.toml
rust/cmux-cli/crates/cmux-cli-protocol/src/: lib.rs
rust/cmux-cli/crates/cmux-cli-server/: Cargo.toml
rust/cmux-cli/crates/cmux-cli-server/src/: ghostty_theme.rs  lib.rs  native_terminal.rs  render.rs  snapshot.rs  terminal_query.rs
rust/cmux-cli/crates/cmux-cli-server/tests/: buffers.rs  chrome_hit_test.rs  chrome_render.rs  click_to_select.rs  client_decoupling.rs  control_chars.rs  env_injection.rs  highlight_copy.rs  keybinds.rs  move_tab.rs  multi_workspace.rs  notify_hook.rs  panel_persistence.rs  protocol_echo.rs  render_coalesce.rs  selection_highlight.rs  split_panes.rs  stress_attach.rs  tab_activity.rs  tab_stack.rs  websocket.rs  workspace_pin.rs
rust/cmux-cli/crates/cmux-iroh-bridge/: Cargo.toml
rust/cmux-cli/crates/cmux-iroh-bridge/src/: ffi.rs  lib.rs  main.rs
rust/cmux-cli/crates/cmx/: Cargo.toml  build.rs
rust/cmux-cli/crates/cmx/src/: main.rs
rust/cmux-cli/crates/cmx/tests/: server_attach.rs  subcommands.rs  tmux_dogfood.rs
(+638 files in other folders)
