[package]
name = "iroh-phone-mac-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "iroh_phone_mac_demo_ffi"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "iroh-demo-tui"
path = "src/bin/iroh-demo-tui.rs"

[dependencies]
anyhow = "1.0.102"
iroh = "0.98.2"
iroh-tickets = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.1", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
