[package]
name = "cmx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
comeup-client = { path = "../comeup-client" }
comeup-protocol = { path = "../comeup-protocol" }
portable-pty.workspace = true
tokio.workspace = true

[dev-dependencies]
comeup-daemon = { path = "../comeup-daemon" }
tempfile.workspace = true

[lints]
workspace = true
