[package]
name = "comeup-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
comeup-protocol = { path = "../comeup-protocol" }
tokio.workspace = true

[lints]
workspace = true
