[package]
name = "comeup-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
comeup-core = { path = "../comeup-core" }
comeup-protocol = { path = "../comeup-protocol" }
portable-pty.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
