[package]
name = "cmux-cli-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wire protocol types for cmux-cli server ↔ client."

[dependencies]
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
