[package]
name = "cmux-iroh-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Iroh transport bridge for the cmux-cli native protocol."

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
getrandom.workspace = true
hmac.workspace = true
iroh.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
cmux-cli-protocol = { path = "../cmux-cli-protocol" }
cmux-cli-server = { path = "../cmux-cli-server" }
tempfile = "3"
